2-4 로그인 폼 만들기 (2)

--- a/_docs/2 로그인 화면 만들기.md
+++ b/_docs/2 로그인 화면 만들기.md
@@ -9,3 +9,16 @@
 ## 2-3 로그인 폼 만들기 (1)
 
 > index.css
+
+## 2-4 로그인 폼 만들기 (2)
+
+> index.css
+
+### 의사 클래스
+
+- `:focus`
+- `:active`
+
+### 의사 요소
+
+- `::placeholder`
