3-2 목록 만들기 (1)

--- a/_docs/3 친구 목록과 채팅 목록 만들기.md
+++ b/_docs/3 친구 목록과 채팅 목록 만들기.md
@@ -3,3 +3,17 @@
 > friends.html
 
 > chats.html
+
+## 3-2 목록 만들기 (1)
+
+> friends.html
+
+> chats.html
+
+> css/components/navbar.css
+
+> css/components/header.css
+
+> css/pages/friends.css
+
+> css/pages/chats.css
