3-4 내 프로필과 친구 프로필 표시하기

--- a/_docs/3 친구 목록과 채팅 목록 만들기.md
+++ b/_docs/3 친구 목록과 채팅 목록 만들기.md
@@ -21,3 +21,11 @@
 ## 3-3 목록 만들기 (2)
 
 > css/components/userlist.css
+
+## 3-4 내 프로필과 친구 프로필 표시하기
+
+> friends.html
+
+> css/pages/friends.css
+
+> css/components/userlist.css
